search fixed and image name show fix

--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -36,7 +36,9 @@
       <form class="navbar-search" action="javascript:;">
         <div class="rel">
           <span class="search-icon"><i class="ti-search"></i></span>
-          <input type="text" class="form-control" placeholder="Search here..." (keyup)="searchMenu($event)">
+          <!-- <input type="text" id="searchMenu" class="form-control" placeholder="Search here..." 
+          (onkeyup)="searchMenu($event)"> -->
+          <input type="text" id="searchMenu" class="form-control" placeholder="Search here...">
         </div>
       </form>
     </li>
