--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -16,7 +16,7 @@
 
   <div class="tab-content" id="nav-tabContent">
     <div id="menu1" class="tab-pane show active" role="tabpanel" aria-labelledby="menu1-tab"><br>
-      <ul class="side-menu metismenu">
+      <ul class="side-menu metismenu" id="allMenuItems">
         <li routerLinkActive="active" id="enrollment" data-hasSub='true' #enrollment>
           <a href="javascript:;">
             <i class="sidebar-item-icon ti-save"></i>
